# ChangeLog for net-misc/knutclient
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/knutclient/ChangeLog,v 1.27 2007/03/31 14:10:12 carlo Exp $

*knutclient-0.9.3 (31 Mar 2007)

  31 Mar 2007; Carsten Lohrke <carlo@gentoo.org>
  +files/knutclient-0.9.3-xdg_desktop_entry.diff, +knutclient-0.9.3.ebuild:
  Version bump.

  30 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> knutclient-0.9.ebuild,
  knutclient-0.9.1.ebuild:
  Fix HOMEPAGE, closes bug #153379.

  29 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  knutclient-0.9.1.ebuild:
  Add ~x86-fbsd keyword.

  29 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  knutclient-0.9.1.ebuild:
  Update admindir to avoid the unrequested autotools regeneration.

*knutclient-0.9.1 (29 Oct 2006)

  29 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +knutclient-0.9.1.ebuild:
  Version bump, thanks to Thoma Kear in bug #153226.

  30 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +files/knutclient-0.9.diff,
  knutclient-0.9.ebuild:
  Fix bug #145307. Thanks to Sunil for the patch.

*knutclient-0.9 (15 Aug 2006)

  15 Aug 2006; Carsten Lohrke <carlo@gentoo.org>
  -knutclient-0.9_pre1.ebuild, +knutclient-0.9.ebuild:
  Version bump.

  27 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  knutclient-0.8.6.ebuild, knutclient-0.9_pre1.ebuild:
  Update homepage.

  16 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regen manifest.

*knutclient-0.9_pre1 (16 Jun 2006)

  16 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +knutclient-0.9_pre1.ebuild:
  Version bump, thanks to Thomas Kear in bug #136903.

  14 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org>
  -knutclient-0.8.5.ebuild:
  Pruned old version.

  14 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org> knutclient-0.8.6.ebuild:
  Stable on amd64, closes bug 124073.

  05 Mar 2006; Jason Wever <weeve@gentoo.org> knutclient-0.8.6.ebuild:
  Stable on SPARC wrt bug #124073.
