@@ -23,18 +23,18 @@ EBUILD knutclient-0.9.1.ebuild 636 RMD160 499c8e185329762f9d242b433e7ec09542a65e
 MD5 05d5ee66399147940ef190bc0f948aa9 knutclient-0.9.1.ebuild 636
 RMD160 499c8e185329762f9d242b433e7ec09542a65e6d knutclient-0.9.1.ebuild 636
 SHA256 6e9123962ae4cd0c9196fe7cd3a49fbcfc92c8a26007c32d69108e7f2f16a566 knutclient-0.9.1.ebuild 636
-EBUILD knutclient-0.9.3.ebuild 679 RMD160 9193f243416218b68bf1f86f7ce429c48bd81d6d SHA1 ebac569dea7fb513632b01963274a00d613e2823 SHA256 95fd68009eb7063c6446fd42521b74354a3c909545827d405bca3cfe5ba8635d
-MD5 c8610501b6ed02f61118dfe62a667f16 knutclient-0.9.3.ebuild 679
-RMD160 9193f243416218b68bf1f86f7ce429c48bd81d6d knutclient-0.9.3.ebuild 679
-SHA256 95fd68009eb7063c6446fd42521b74354a3c909545827d405bca3cfe5ba8635d knutclient-0.9.3.ebuild 679
+EBUILD knutclient-0.9.3.ebuild 690 RMD160 832df962e727b85919cce7bf41979d0b11e458ce SHA1 83281811d0b0464ca728dab6f4264735ffc44c7f SHA256 04840e8af651bc27af7c5633833c9d01265e2ed25797ec316fd78b8dcffcc6d7
+MD5 9478f1d472a03a93630bf241f2fac9bd knutclient-0.9.3.ebuild 690
+RMD160 832df962e727b85919cce7bf41979d0b11e458ce knutclient-0.9.3.ebuild 690
+SHA256 04840e8af651bc27af7c5633833c9d01265e2ed25797ec316fd78b8dcffcc6d7 knutclient-0.9.3.ebuild 690
 EBUILD knutclient-0.9.ebuild 580 RMD160 a8feab349927b4aff4cfe52b1470a621bd4dfd99 SHA1 c827dabe41c5a8bb02dcb9c70c45c345254eabc3 SHA256 e774621c55570b7c5eae73c0297cc295ee78f52d879cacce39f5842bdcc0d2f7
 MD5 ecc120908c7d8f5b255d19471046169c knutclient-0.9.ebuild 580
 RMD160 a8feab349927b4aff4cfe52b1470a621bd4dfd99 knutclient-0.9.ebuild 580
 SHA256 e774621c55570b7c5eae73c0297cc295ee78f52d879cacce39f5842bdcc0d2f7 knutclient-0.9.ebuild 580
-MISC ChangeLog 3571 RMD160 2afd8b64e25d1ddb8f5c1e8a04a1357b25b44fae SHA1 dd1e1fd6b739d05ad2c72b158a3b40e088afec7f SHA256 4ebfaf701b8b30ef674de6c6e0e90476e24379b4602a878d824a0460e9278ea2
-MD5 6a31547b7b0e381637502f2848280620 ChangeLog 3571
-RMD160 2afd8b64e25d1ddb8f5c1e8a04a1357b25b44fae ChangeLog 3571
-SHA256 4ebfaf701b8b30ef674de6c6e0e90476e24379b4602a878d824a0460e9278ea2 ChangeLog 3571
+MISC ChangeLog 3675 RMD160 0d173e0e4d547e6e2bba28db03b621430d8d5092 SHA1 c27f01dc756611471d885b19e4877226ab7ccd00 SHA256 6fc671f44e7ac30aacea1d209c2f683876584975e4013a7f2678d8bf428d89f9
+MD5 27ec9f18f13e53053e2116dd40c9394f ChangeLog 3675
+RMD160 0d173e0e4d547e6e2bba28db03b621430d8d5092 ChangeLog 3675
+SHA256 6fc671f44e7ac30aacea1d209c2f683876584975e4013a7f2678d8bf428d89f9 ChangeLog 3675
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
