@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/knutclient/Attic/knutclient-0.9.3.ebuild,v 1.1 2007/03/31 14:10:12 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/knutclient/Attic/knutclient-0.9.3.ebuild,v 1.2 2007/03/31 14:12:34 carlo Exp $
 
 inherit kde
 
@@ -8,12 +8,12 @@ MY_P=${P/_/-}
 S=${WORKDIR}/${MY_P}
 
 DESCRIPTION="Client for the NUT UPS monitoring daemon"
-HOMEPAGE="ttp://www.alo.cz/knutclient/index.html"
+HOMEPAGE="http://www.alo.cz/knutclient/index.html"
 SRC_URI="ftp://ftp.buzuluk.cz/pub/alo/knutclient/stable/${MY_P}.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 
 need-kde 3.5
